- Mac
   + Quick Look integration in the main window and inspector's file tab
   + Transfers can be dragged to different groups
   + Option to only show the add window when manually adding transfers
   + Status strings are toggled from the action button (they are no longer clickable)
   + Colors in pieces bar and pieces box more accurately reflect their corresponding values
- GTK+
   + Add options to inhibit hibernation and to toggle the tray icon

1.22 (2008/06/13)
http://trac.transmissionbt.com/query?group=component&milestone=1.22
- All Platforms
  + Fix two separate BitTorrent unchoke bugs that could affect performance
  + Transmission now builds correctly on Sun Studio
  + Minor man page fixes
- Mac
  + Fix bug where "Program Started" in the Statistics window would sometimes display as 0
- GTK+
  + Fix crash when quitting while the stats window is still up
  + Added Latvian, Malayalam, Serbian, and Telugu translations
  + Updated Czech, Spanish, Romanian, Russian, Dutch, Polish, Italian,
    Portuguese, Catalan, Danish, German, Swedish, Traditional Chinese,
    Finnish, and Chinese (simplified) translations
- CLI:
  + Fix scraping torrents with the -s command-line argument

1.21 (2008/05/21)
http://trac.transmissionbt.com/query?group=component&milestone=1.21
- All Platforms
   + Fix rare crash-on-startup bug
   + Handle corrupt announce URLs in torrent files more gracefully
   + Fix minor memory leak when closing torrents
- Mac
   + Fix visual glitch with the pieces bar
   + Italian localization included
- GTK+
   + Updated Catalan, Danish, German, Spanish, Finnish, Hebrew, Italian, Dutch,
     Polish, Romanian, Thai, Turkish, and Traditional Chinese translations

1.20 (2008/05/09)
http://trac.transmissionbt.com/query?group=component&milestone=1.20
- All Platforms
   + Support https tracker connections
   + IP blocking using the Bluetack Level1 blocklist
   + Better support of multitracker torrents
   + Faster UPnP port mapping on startup