@@ -1,1 +1,1 @@
-<html>	<head>		<META http-equiv="Content-Type" content="text/html; charset=utf-8" />		<link media="all" rel="stylesheet" href="../styles/TransBody.css" />		<title>Port Forwarding FAQ</title>	</head>	<body>		<div id="mainbox">			<div id="banner">				<a name="menus"></a>				<div id="machelp">				<a class="bread" href="../index.html">Transmission Help</a>				</div>				<div id="index">				<a class="leftborder" href="../html/Index2.html">Index</a></div>				</div>			</div>						<div id="pagetitle">				<h1>How do I Port Forward?</h1>			</div>			<ul>				<li>If you have an Apple Airport, or a UPnP compatible router, Transmission can map its port automatically. Most routers manufactured since 2001 have this feature.				<div summary="To do this" id="taskbox">					<ol>						<li>Open Transmission. </li>						<li>Go to Preferences >> Network, and check 'Automatically map port'. </li>						<li>If you get a green dot and 'Port is Open' then you have successfully port forwarded!</li>						<p>If you get a red dot and the message 'Port is closed'/'Port is Stealth', <a href="troubleshoot.html">click here</a>.</li>					</ol>								</div>								<li>If you don't have a compatible router, it is simple to forward Transmission's port manually. For instructions <a href="pfrouter.html">click here</a>.</li>				<li>If you don't use a router, that is, your modem is directly connected to your computer, you'll need to open Transmission's port in the Mac OS X firewall. For instructions <a href="pffirewall.html">click here</a>.<br>				<b>NB:</b> it is highly recommended you enable the Mac OS X firewall if you are not using a router.</li>			</ul>				<p>Keep in mind that many DSL modems also function as routers, and hence port forwarding as per above may still be necessary, even though your computer is directly connected to the modem.							<p>		</div>	</body>	</html>
+<html>	<head>		<META http-equiv="Content-Type" content="text/html; charset=utf-8" />		<link media="all" rel="stylesheet" href="../styles/TransBody.css" />		<title>Port Forwarding FAQ</title>	</head>	<body>		<div id="mainbox">			<div id="banner">				<a name="menus"></a>				<div id="machelp">				<a class="bread" href="../index.html">Transmission Help</a>				</div>				<div id="index">				<a class="leftborder" href="../html/Index2.html">Index</a></div>				</div>			</div>						<div id="pagetitle">				<h1>How do I Port Forward?</h1>			</div>			<ul>				<li>If you have an Apple Airport, or a UPnP compatible router, Transmission can map its port automatically. Most routers manufactured since 2001 have this feature.				<div summary="To do this" id="taskbox">					<ol>						<li>Open Transmission. </li>						<li>Go to Preferences >> Network, and check 'Automatically map port'. </li>						<li>If you get a green dot and 'Port is Open' then you have successfully port forwarded!</li>						<p>If you get a red dot and the message 'Port is closed', <a href="troubleshoot.html">click here</a>.</li>					</ol>								</div>								<li>If you don't have a compatible router, it is simple to forward Transmission's port manually. For instructions <a href="pfrouter.html">click here</a>.</li>				<li>If you don't use a router, that is, your modem is directly connected to your computer, you'll need to open Transmission's port in the Mac OS X firewall. For instructions <a href="pffirewall.html">click here</a>.<br>				<b>NB:</b> it is highly recommended you enable the Mac OS X firewall if you are not using a router.</li>			</ul>				<p>Keep in mind that many DSL modems also function as routers, and hence port forwarding as per above may still be necessary, even though your computer is directly connected to the modem.							<p>		</div>	</body>	</html>
