@@ -19,6 +19,7 @@ http://trac.transmissionbt.com/query?group=component&milestone=1.30
    + Option to only show the add window when manually adding transfers
    + Status strings are toggled from the action button (they are no longer clickable)
    + Colors in pieces bar and pieces box more accurately reflect their corresponding values
+   + The port checker now uses our own portcheck.transmissionbt.com
 - GTK+
    + Add options to inhibit hibernation and to toggle the tray icon
 
